fixing stretch

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -86,6 +86,7 @@ button{
 }
 .facebook, .insta, .email{
     width: 60%;
+    max-height: 100%;
     padding: .5rem;
     justify-content: center;
 }
